@@ -16,6 +16,7 @@ Version 4.10.31  (July ??, 2017)
 	- Tomb of Sargeras: The Deceiver's Downfall
 	- Tomb of Sargeras: Pillars of Creation
 	- Darkheart Thicket: The Glamour Has Faded
+	- Halls of Valor: Revenge of the Enchantress
 	
 
 
